--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,8 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:micro]
-platform = atmelavr
-board = micro
+[env:esp32dev]
+platform = espressif32
+board = esp32dev
 framework = arduino
 lib_deps = marcoschwartz/LiquidCrystal_I2C@^1.1.4
